--- a/idea-board/package.json
+++ b/idea-board/package.json
@@ -6,9 +6,11 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "16.4.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "16.4.0",
     "react-redux": "^6.0.0",
     "react-scripts": "1.1.4",
+    "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
     "reselect": "^4.0.0"
   },
